# RustGame

./: README.md
game/: Cargo.toml  memo
game/src/: main.rs  render_gl.rs  resources.rs  triangle.flag  triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
