[package]
name = "game"
version = "0.1.0"
authors = ["cod4i3 <imasdaisukiproducermasu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.2",features = ["bundled", "static-link"]}
gl = { path = "../lib/gl" }